[package]
name = "dev-tool"
version = "0.1.0"
description = "Dev tool"
authors = ["Simon McWhinnie <simon.mcwhinnie@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
ratatui = "0.30.0"
color-eyre = "0.6.3"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
webbrowser = "1.1.0"
which = "8.0.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dirs = "6.0.0"
strum = "0.27.2"
strum_macros = "0.27.2"
log = "0.4.29"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
test-case = "3.3.1"
mockito = "1"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
